[gd_scene load_steps=5 format=3 uid="uid://blupxbsp7gqa"]

[ext_resource type="Texture2D" uid="uid://dv8hpd503bpp" path="res://Assets/Sprites/Player Single Bullet.png" id="1_eotlr"]
[ext_resource type="Script" path="res://Scripts/player_increased_damage_bullet.gd" id="1_grnoh"]
[ext_resource type="AudioStream" uid="uid://c462734cnw831" path="res://Assets/SingularLaserShot.mp3" id="3_vpi33"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wmomm"]
radius = 60.0

[node name="PlayerIncreasedDamageBullet" type="Area2D" groups=["PlayerBullet"]]
scale = Vector2(0.15, 0.15)
script = ExtResource("1_grnoh")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["PlayerBullet"]]
texture = ExtResource("1_eotlr")
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["PlayerBullet"]]
shape = SubResource("CircleShape2D_wmomm")

[node name="Timer" type="Timer" parent="." groups=["PlayerBullet"]]
wait_time = 5.0
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." groups=["PlayerBullet"]]

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vpi33")
volume_db = -15.0
pitch_scale = 3.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
